
syntax = "proto3";

package api.template.v1;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
//import public "tkeel-io/search/api/v1/search.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/tkeel-io/tkeel-device/api/template/v1;v1";
option java_multiple_files = true;
option java_package = "api.template.v1";

service Template {
    //Operation template entity
	rpc CreateTemplate (CreateTemplateRequest) returns (CreateTemplateResponse) {
		option (google.api.http) = {
			post : "/templates"
			body : "basicInfo"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "创建模板对象";
            operation_id: "CreateTemplate";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc UpdateTemplate (UpdateTemplateRequest) returns (UpdateTemplateResponse) {
		option (google.api.http) = {
			put : "/templates/{uid}"
			body : "basicInfo"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "更新模板对象";
            operation_id: "UpdateTemplate";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc DeleteTemplate (DeleteTemplateRequest) returns (DeleteTemplateResponse) {
		option (google.api.http) = {
			post : "/templates/delete"
            body : "ids"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "删除模板对象";
            operation_id: "DeleteTemplate";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc GetTemplate (GetTemplateRequest) returns (GetTemplateResponse) {
		option (google.api.http) = {
			get : "/templates/{uid}"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "获取模板对象";
            operation_id: "GetTemplate";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};

    //operation template attribute
	rpc AddTemplateAttribute (AddTemplateAttributeRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			post : "/templates/{uid}/attribute"
			body : "attr"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "添加模板属性定义";
            operation_id: "AddTemplateAttribute";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc UpdateTemplateAttribute (UpdateTemplateAttributeRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			put : "/templates/{uid}/attribute"
			body : "attr"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "更新模板属性定义";
            operation_id: "UpdateTemplateAttribute";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc DeleteTemplateAttribute (DeleteTemplateAttributeRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			post : "/templates/{uid}/attribute/delete"
            body : "ids"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "删除模板属性定义";
            operation_id: "DeleteTemplateAttribute";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc GetTemplateAttribute (GetTemplateAttributeRequest) returns (GetTemplateAttributeResponse) {
		option (google.api.http) = {
			get : "/templates/{uid}/attribute/{id}"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "获取单条模板属性定义";
            operation_id: "GetTemplateAttribute";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc ListTemplateAttribute (ListTemplateAttributeRequest) returns (ListTemplateAttributeResponse) {
		option (google.api.http) = {
			get : "/templates/{uid}/attribute"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "获取模板属性定义列表";
            operation_id: "ListTemplateAttribute";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};

    //operation template telemetry
	rpc AddTemplateTelemetry (AddTemplateTelemetryRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			post : "/templates/{uid}/telemetry"
			body : "tele"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "添加模板遥测定义";
            operation_id: "AddTemplateTelemetry";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc UpdateTemplateTelemetry (UpdateTemplateTelemetryRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			put : "/templates/{uid}/telemetry"
			body : "tele"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "更新模板遥测定义";
            operation_id: "UpdateTemplateTelemetry";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc DeleteTemplateTelemetry (DeleteTemplateTelemetryRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			post : "/templates/{uid}/telemetry/delete"
            body : "ids"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "删除模板遥测定义";
            operation_id: "DeleteTemplateTelemetry";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc GetTemplateTelemetry (GetTemplateTelemetryRequest) returns (GetTemplateTelemetryResponse) {
		option (google.api.http) = {
			get : "/templates/{uid}/telemetry/{id}"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "获取模板单条遥测定义";
            operation_id: "GetTemplateTelemetry";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc ListTemplateTelemetry (ListTemplateTelemetryRequest) returns (ListTemplateTelemetryResponse) {
		option (google.api.http) = {
			get : "/templates/{uid}/telemetry"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "获取模板遥测定义列表";
            operation_id: "ListTemplateTelemetry";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc AddTemplateTelemetryExt (AddTemplateTelemetryExtRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			post : "/templates/{uid}/telemetry/{id}/ext"
			body : "kvs"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "添加模板遥测扩展配置";
            operation_id: "AddTemplateTelemetryExt";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc UpdateTemplateTelemetryExt (UpdateTemplateTelemetryExtRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			put : "/templates/{uid}/telemetry/{id}/ext"
			body : "kvs"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "更新模板遥测扩展配置";
            operation_id: "UpdateTemplateTelemetryExt";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc DeleteTemplateTelemetryExt (DeleteTemplateTelemetryExtRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			post : "/templates/{uid}/telemetry/{id}/ext/delete"
            body: "keys"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "删除模板遥测扩展配置";
            operation_id: "DeleteTemplateTelemetryExt";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};

    //operation template command
	rpc AddTemplateCommand (AddTemplateCommandRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			post : "/templates/{uid}/command"
			body : "cmd"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "添加模板命令定义";
            operation_id: "AddTemplateCommand";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc UpdateTemplateCommand (UpdateTemplateCommandRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			put : "/templates/{uid}/command"
			body : "cmd"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "更新模板命令定义";
            operation_id: "UpdateTemplateCommand";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc DeleteTemplateCommand (DeleteTemplateCommandRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			post : "/templates/{uid}/command/delete"
            body : "ids"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "删除模板命令定义";
            operation_id: "DeleteTemplateCommand";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc GetTemplateCommand (GetTemplateCommandRequest) returns (GetTemplateCommandResponse) {
		option (google.api.http) = {
			get : "/templates/{uid}/command/{id}"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "获取模板单条命令定义";
            operation_id: "GetTemplateCommand";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
	rpc ListTemplateCommand (ListTemplateCommandRequest) returns (ListTemplateCommandResponse) {
		option (google.api.http) = {
			get : "/templates/{uid}/command"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "获取模板命令定义列表";
            operation_id: "ListTemplateCommand";
            tags: "template";
            responses: {
                key: "200"
                value: {
                    description: "OK";
                }
            }
        };
	};
}


//basic 
message TemplateBasicInfo {
    string name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板名称"}];
    string customId = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板自定义id 选填"}];
    string description = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板描述"}];
}

/*message TemplateBasicInfo1 {
    string name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板名称"}];
    string description = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板描述"}];
}*/

message PropConfig {
    string name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "名称"}];
    string id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "标识符"}];
    string type = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "数据类型"}];
    google.protobuf.Value define = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "数据定义和约束"}];
    string description = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "说明"}];
}

message Ids {
	repeated string ids = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "ID 数组"}];
}

message Keys {
	repeated string keys = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "key 数组"}];
}
//user <--->  device

    //template obj 
message CreateTemplateRequest {
    TemplateBasicInfo basicInfo  = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板基本信息"}];
}

message CreateTemplateResponse {
    //api.core.v1.EntityResponse templateObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板对象"}];
    google.protobuf.Value templateObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板对象"}];
}

message UpdateTemplateRequest { 
    TemplateBasicInfo basicInfo  = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板基本信息"}];
    string uid = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
}
message UpdateTemplateResponse {
    //api.core.v1.EntityResponse templateObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板对象"}];
    google.protobuf.Value templateObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板对象"}];
}

message DeleteTemplateRequest {
    Ids ids = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID 数组"}];
}
message DeleteTemplateResponse {
    repeated FaildDelTemplate faildDelTemplate = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板删除失败 数组"}];
}
message FaildDelTemplate {
    string id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
    string reason = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "原因"}];
}
message GetTemplateRequest { 
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
}
message GetTemplateResponse { 
    google.protobuf.Value templateObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板对象"}];
    //api.core.v1.EntityResponse templateObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板对象"}];
}

    //attribute
message AddTemplateAttributeRequest {
    //PropConfig attr  = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "属性对象"}];
    google.protobuf.Value attr  = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "属性对象"}];
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
}

message UpdateTemplateAttributeRequest { 
    //PropConfig attr  = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "属性对象"}];
    google.protobuf.Value attr  = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "属性对象"}];
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
}

message DeleteTemplateAttributeRequest { 
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
    Ids  ids = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "属性ID 数组"}];
}

message GetTemplateAttributeRequest { 
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
    string  id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "属性ID"}];
}
message GetTemplateAttributeResponse { 
    //api.core.v1.EntityResponse templateAttrSingleObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "单个属性对象"}];
    google.protobuf.Value templateAttrSingleObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "单个属性对象"}];
}

message ListTemplateAttributeRequest {
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
}
message ListTemplateAttributeResponse { 
    //repeated Attribute attributes = 3;
    //api.core.v1.EntityResponse templateAttrObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "属性列表对象"}];
    google.protobuf.Value templateAttrObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "属性列表对象"}];
}

    //telemetry
message AddTemplateTelemetryRequest {
    //PropConfig tele  = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "遥测"}];
    google.protobuf.Value tele  = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "遥测"}];
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
}
message UpdateTemplateTelemetryRequest { 
    //PropConfig tele  = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "遥测"}];
    google.protobuf.Value tele  = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "遥测"}];
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
}
message DeleteTemplateTelemetryRequest { 
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
    Ids  ids = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "遥测ID 数组"}];
}
message GetTemplateTelemetryRequest { 
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
    string  id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "遥测ID"}];
}
message GetTemplateTelemetryResponse { 
    //api.core.v1.EntityResponse templateTeleSingleObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "单个遥测对象"}];
    google.protobuf.Value templateTeleSingleObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "单个遥测对象"}];
}
message ListTemplateTelemetryRequest {
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "属性ID"}];
}
message ListTemplateTelemetryResponse { 
    //api.core.v1.EntityResponse templateTeleObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "遥测列表对象"}];
    google.protobuf.Value templateTeleObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "遥测列表对象"}];
}

message AddTemplateTelemetryExtRequest {
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模型ID"}];
    string id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "遥测ID"}];
    google.protobuf.Value kvs = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "扩展配置KV map"}];
}
message UpdateTemplateTelemetryExtRequest {
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模型ID"}];
    string id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "遥测ID"}];
    google.protobuf.Value kvs = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "扩展配置KV map"}];
}
message DeleteTemplateTelemetryExtRequest {
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模型ID"}];
    string id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "遥测ID"}];
    Keys keys = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "扩展配置key 数组"}];
}

    //command
message AddTemplateCommandRequest {
    //PropConfig cmd  = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "命令"}];
    google.protobuf.Value cmd  = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "命令"}];
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
}

message UpdateTemplateCommandRequest { 
    //PropConfig cmd  = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "命令"}];
    google.protobuf.Value cmd  = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "命令"}];
    //google.protobuf.Value cmd  = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "命令"}];
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
}
message DeleteTemplateCommandRequest { 
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
    Ids  ids = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "命令ID 数组"}];
}
message GetTemplateCommandRequest { 
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
    string  id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "命令ID"}];
}
message GetTemplateCommandResponse { 
    //api.core.v1.EntityResponse templateCmdSingleObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "单个命令对象"}];
    google.protobuf.Value templateCmdSingleObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "单个命令对象"}];
}
message ListTemplateCommandRequest {
    string uid = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "模板ID"}];
}
message ListTemplateCommandResponse { 
    //api.core.v1.EntityResponse templateCmdObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "命令列表对象"}];
    google.protobuf.Value templateCmdObject = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "命令列表对象"}];
}

// device to core 
message TemplateEntityCoreInfo {
    TemplateBasicInfo  basicInfo = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "基本信息"}];
    TemplateEntitySysField  sysField = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "系统信息"}];
}
message UpdateTemplateEntityCoreInfo {
    TemplateBasicInfo  basicInfo = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "基本信息"}];
}

message TemplateEntitySysField {
    string _id                       = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "设备组ID"}];
	int64 _createdAt 				 = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "设备组创建时间"}];
    int64 _updatedAt 				 = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "设备组更新时间"}];
    string _owner = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: " 所有者"}];
    string _source = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "来源"}];
    string _tenantId = 6 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "租户ID"}];
}

message ListEntityQuery {
    int32 page_num= 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "记录开始位置"}];
    int32 page_size = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "每页限制条数"}];
    string order_by = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "排序字段"}];
    bool is_descending = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "是否逆序， false：不逆序，true:逆序"}];
    string query = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "es查询条件"}];
    repeated Condition condition = 6 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "组合条件"}];
}

message Condition {
	string field 		= 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "查询输出字段"}];
	string value  	= 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "值"}];
	string operator = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "操作符, $eq为相等，$neq为不等，$lt为小于，$gt为大于，$lne为小于等于， $gne为大于等于"}];
}
//device <--->  core

